--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
@@ -22,6 +24,7 @@
     "react-native": "~0.63.4",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-input-style": "^1.0.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~2.1.0",
