--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "main": "index.js",
+  "proxy": "http://192.168.43.228:5000",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -9,20 +10,23 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "1.9.11",
+    "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
+    "mongoose": "^5.12.13",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-input-style": "^1.0.2",
     "react-native-linear-gradient": "^2.5.6",
