--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-picker": "^4.0.4",
     "react-native-input-style": "^1.0.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.8.1",
